added description and stack

--- a/index.html
+++ b/index.html
@@ -40,26 +40,22 @@
             <div class="box-2">
                 <section class="nested-box-2">
                     <div class="project-img1">
-    
+                        <a href="#"><img src="./imgs/bookmark.png" alt="bookmark app"></a>
                     </div>
                     <div class="project-description">
-                        <p>description: Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore hic sit dicta
-                            non aspernatur, ut modi.</p>
-                        <p>stack: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio iure corporis
-                            tempore dolorum, ducimus quibusdam accusantium!</p>
+                        <p>Description: A bookmark app that allows you to add/delete websites that you wish to reference.</p>
+                        <p>Stack: Html, Css, JQuery and Webpack</p>
                     </div>
                 </section>
             </div>
             <div class="box-3">
                 <section class="nested-box-3">
                     <div class="project-img2">
-                        <!-- <img src="./imgs/Screen Shot 2019-07-09 at 8.43.20 AM.png"> -->
+                            <a href="#"><img src="./imgs/quiz.png" alt="quiz app"></a>
                     </div>
                     <div class="project-description">
-                        <p>description: Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore hic sit dicta
-                            non aspernatur, ut modi.</p>
-                        <p>stack: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio iure corporis
-                            tempore dolorum, ducimus quibusdam accusantium!</p>
+                        <p>Description: A Quiz app of 5 questions, that tests your knowledge of the Harry Potter movies.</p>
+                        <p>Stack: Html, Css, JQuery </p>
                     </div>
                 </section>
             </div>
