added links to repo and live version

--- a/index.html
+++ b/index.html
@@ -43,8 +43,12 @@
                         <a href="#"><img src="./imgs/bookmark.png" alt="bookmark app"></a>
                     </div>
                     <div class="project-description">
+                        <p>Title: Bookmark This</p>
                         <p>Description: A bookmark app that allows you to add/delete websites that you wish to reference.</p>
                         <p>Stack: Html, Css, JQuery and Webpack</p>
+                        <p>Links: <span><a href="https://github.com/thinkful-ei-iguana/javier-bookmarks-app">Github</a></span>
+                        <span><a href="https://thinkful-ei-iguana.github.io/javier-bookmarks-app/">Live App</a></span>
+                        </p>
                     </div>
                 </section>
             </div>
@@ -54,8 +58,12 @@
                             <a href="#"><img src="./imgs/quiz.png" alt="quiz app"></a>
                     </div>
                     <div class="project-description">
+                        <p>Title: Harry Potter Quiz</p>
                         <p>Description: A Quiz app of 5 questions, that tests your knowledge of the Harry Potter movies.</p>
                         <p>Stack: Html, Css, JQuery </p>
+                        <p>Links: <span><a href="https://github.com/thinkful-ei-iguana/Javi_Chistina_quiz_app">Github</a></span>
+                            <span><a href="https://thinkful-ei-iguana.github.io/Javi_Chistina_quiz_app/">Live App</a></span>
+                            </p>
                     </div>
                 </section>
             </div>
