added tech logos

--- a/index.html
+++ b/index.html
@@ -44,10 +44,13 @@
                     </div>
                     <div class="project-description">
                         <p>Title: Bookmark This</p>
-                        <p>Description: A bookmark app that allows you to add/delete websites that you wish to reference.</p>
+                        <p>Description: A bookmark app that allows you to add/delete websites that you wish to
+                            reference.</p>
                         <p>Stack: Html, Css, JQuery and Webpack</p>
-                        <p>Links: <span><a href="https://github.com/thinkful-ei-iguana/javier-bookmarks-app">Github</a></span>
-                        <span><a href="https://thinkful-ei-iguana.github.io/javier-bookmarks-app/">Live App</a></span>
+                        <p>Links: <span><a
+                                    href="https://github.com/thinkful-ei-iguana/javier-bookmarks-app">Github</a></span>
+                            <span><a href="https://thinkful-ei-iguana.github.io/javier-bookmarks-app/">Live
+                                    App</a></span>
                         </p>
                     </div>
                 </section>
@@ -55,31 +58,43 @@
             <div class="box-3">
                 <section class="nested-box-3">
                     <div class="project-img2">
-                            <a href="#"><img src="./imgs/quiz.png" alt="quiz app"></a>
+                        <a href="#"><img src="./imgs/quiz.png" alt="quiz app"></a>
                     </div>
                     <div class="project-description">
                         <p>Title: Harry Potter Quiz</p>
-                        <p>Description: A Quiz app of 5 questions, that tests your knowledge of the Harry Potter movies.</p>
+                        <p>Description: A Quiz app of 5 questions, that tests your knowledge of the Harry Potter movies.
+                        </p>
                         <p>Stack: Html, Css, JQuery </p>
-                        <p>Links: <span><a href="https://github.com/thinkful-ei-iguana/Javi_Chistina_quiz_app">Github</a></span>
-                            <span><a href="https://thinkful-ei-iguana.github.io/Javi_Chistina_quiz_app/">Live App</a></span>
-                            </p>
+                        <p>Links: <span><a
+                                    href="https://github.com/thinkful-ei-iguana/Javi_Chistina_quiz_app">Github</a></span>
+                            <span><a href="https://thinkful-ei-iguana.github.io/Javi_Chistina_quiz_app/">Live
+                                    App</a></span>
+                        </p>
                     </div>
                 </section>
             </div>
 
             <div class="box-4">
                 <section class="nested-box-4">
-                    <div class="tech-title"">
-                          <p>technologies i have worked with</p>
+                    <div class="tech-title">
+                        <h2>technologies I have worked with</h2>
                     </div>
-                    <div class="list-of-tect">
-                        <span>JQuery img</span>
-                        <span>React img</span>
-                        <span>RESTful API </span>
-                        <span>NodeJS</span>
-                        <span>MongoDB</span>
+                    <div class="list-of-tech">
+                        <div class="tech-imgs">
+                            <img class="img" src="./imgs/jquery.png" alt="jquery image">
+                        </div>
+                        <div class="tech-imgs">
+                                <img class="img" src="./imgs/react.png" alt="React image">
+                            </div>
                     </div>
+                    <div class="list-of-tech">
+                            <div class="tech-imgs">
+                                <img class="img" src="./imgs/nodejs.png" alt="nodejs image">
+                            </div>
+                            <div class="tech-imgs">
+                                    <img class="img" src="./imgs/mongodb.png" alt="mongodb image">
+                                </div>
+                        </div>
                 </section>
             </div>
         </div>
