--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 
 <body>
 
-    <div id="nav-wrapper">
+    <div class="nav-wrapper 
+    background-image">
         <header role="banner">
             <div id="name-and-title">
                 <h1>Javier Zapien</h1>
