more css adjustments made typewriter for second head tag inside header. still need to mess with other section colors

--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
 
 <body>
 
-    <div class="nav-wrapper 
-    background-image">
+    <div class="nav-wrapper">
         <header role="banner">
-            <div id="name-and-title">
+            <div class="name-and-title">
                 <h1>Javier Zapien</h1>
-                <h2>Full Stack Web Developer</h2>
+                <div class="type-box">
+                <h2>Full Stack Web Developer.</h2>
+            </div>
             </div>
         </header>
         <nav role="navigation">
@@ -25,7 +26,7 @@
             </div>
         </nav>
     </div>
-    <main role="main">
+    <main role="main" class="background-image">
         <div id="main-wrapper">
             <div class="box-1">
                 <section>
@@ -78,7 +79,7 @@
             <div class="box-4">
                 <section class="nested-box-4">
                     <div class="tech-title">
-                        <h2>technologies I have worked with</h2>
+                        <h2>Technologies I have worked with</h2>
                     </div>
                     <div class="list-of-tech">
                         <div class="tech-imgs">
