working on media queries

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="name-and-title">
                 <h1>Javier Zapien</h1>
                 <div class="type-box">
-                <h2>Full Stack Web Developer.</h2>
+                <h2 class="type-text">Full Stack Web Developer.</h2>
             </div>
             </div>
         </header>
@@ -30,7 +30,7 @@
         <div id="main-wrapper">
             <div class="box-1">
                 <section>
-                    <h3 class="about-me">ABOUT ME</h3>
+                    <h3 class="about-me tdsl">ABOUT ME</h3>
                     <p class="about-me-para">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas ipsa
                         suscipit asperiores quia natus dolorum, est libero repellendus explicabo? Facilis similique,
                         explicabo voluptatem fuga magni at doloribus voluptates corrupti, cum ullam commodi laudantium
@@ -45,11 +45,11 @@
                         <a href="#"><img src="./imgs/bookmark.png" alt="bookmark app"></a>
                     </div>
                     <div class="project-description">
-                        <p>Title: Bookmark This</p>
-                        <p>Description: A bookmark app that allows you to add/delete websites that you wish to
+                        <p><span class="tdsl">Title:</span> Bookmark This</p>
+                        <p><span class="tdsl">Description:</span> A bookmark app that allows you to add/delete websites that you wish to
                             reference.</p>
-                        <p>Stack: Html, Css, JQuery and Webpack</p>
-                        <p>Links: <span><a
+                        <p><span class="tdsl">Stack:</span> Html, Css, JQuery and Webpack</p>
+                        <p><span class="tdsl">Links:</span> <span><a
                                     href="https://github.com/thinkful-ei-iguana/javier-bookmarks-app">Github</a></span>
                             <span><a href="https://thinkful-ei-iguana.github.io/javier-bookmarks-app/">Live
                                     App</a></span>
@@ -63,11 +63,11 @@
                         <a href="#"><img src="./imgs/quiz.png" alt="quiz app"></a>
                     </div>
                     <div class="project-description">
-                        <p>Title: Harry Potter Quiz</p>
-                        <p>Description: A Quiz app of 5 questions, that tests your knowledge of the Harry Potter movies.
+                        <p><span class="tdsl">Title:</span> Harry Potter Quiz</p>
+                        <p><span class="tdsl">Description:</span> A Quiz app of 5 questions, that tests your knowledge of the Harry Potter movies.
                         </p>
-                        <p>Stack: Html, Css, JQuery </p>
-                        <p>Links: <span><a
+                        <p><span class="tdsl">Stack:</span> Html, Css, JQuery </p>
+                        <p><span class="tdsl">Links:</span> <span><a
                                     href="https://github.com/thinkful-ei-iguana/Javi_Chistina_quiz_app">Github</a></span>
                             <span><a href="https://thinkful-ei-iguana.github.io/Javi_Chistina_quiz_app/">Live
                                     App</a></span>
@@ -79,7 +79,7 @@
             <div class="box-4">
                 <section class="nested-box-4">
                     <div class="tech-title">
-                        <h2>Technologies I have worked with</h2>
+                        <h2 class="tect-text">Technologies I have worked with</h2>
                     </div>
                     <div class="list-of-tech">
                         <div class="tech-imgs">
