--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="en">
 
 <head>
-    <title>HTML wireframe</title>
+    <title>Portfolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/normalize/6.0.0/normalize.css">
     <link rel="stylesheet" type="text/css" href="main.css">
@@ -20,9 +20,9 @@
         </header>
         <nav role="navigation">
             <div class="nav-links-wrapper">
-                <span><a href="#">Home</a></span>
-                <span><a href="#">Projects</a></span>
-                <span><a href="#">Contact</a></span>
+                <span><a href="index.html">Home</a></span>
+                <span><a href="project.html">Projects</a></span>
+                <span><a href="contact.html">Contact</a></span>
             </div>
         </nav>
     </div>
@@ -35,7 +35,7 @@
                         suscipit asperiores quia natus dolorum, est libero repellendus explicabo? Facilis similique,
                         explicabo voluptatem fuga magni at doloribus voluptates corrupti, cum ullam commodi laudantium
                         animi culpa? Iure blanditiis eos culpa expedita.</p>
-                    <p>perosonal: Lorem ipsum dolor, sit amet consectetur adipisicing elit. Est corrupti unde
+                    <p><span class="tdsl">Perosonal:</span> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Est corrupti unde
                         dignissimos animi doloremque delectus impedit. Sint at suscipit molestiae!</p>
                 </section>
             </div>
@@ -79,7 +79,7 @@
             <div class="box-4">
                 <section class="nested-box-4">
                     <div class="tech-title">
-                        <h2 class="tect-text">Technologies I have worked with</h2>
+                        <h2 class="tech-text">Technologies I have worked with</h2>
                     </div>
                     <div class="list-of-tech">
                         <div class="tech-imgs">
@@ -101,7 +101,7 @@
             </div>
         </div>
     </main>
-    <footer role="content-info">Footer</footer>
+    <footer role="content-info">&copy; 2019</footer>
 </body>
 
 </html>
