added more css and background imgs to projects. next need to work on media queries

--- a/project.html
+++ b/project.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,62 +8,73 @@
     <title>Projects</title>
     <link rel="stylesheet" href="project.css">
 </head>
+
 <body>
-        <div class="nav-wrapper">
-                <header role="banner">
-                    <div class="name-and-title">
-                        <h1>Javier Zapien</h1>
-                        <div class="type-box">
-                        <h2 class="type-text">Full Stack Web Developer.</h2>
-                    </div>
-                    </div>
-                </header>
-                <nav role="navigation">
-                    <div class="nav-links-wrapper">
-                        <span><a href="index.html">Home</a></span>
-                        <span><a href="project.html">Projects</a></span>
-                        <span><a href="contact.html">Contact</a></span>
-                    </div>
-                </nav>
-            </div>
-            <div class="project-wrapper">
-            <div class="box-2">
-                    <section class="nested-box-2">
-                        <div class="project-img1">
-                            <a href="#"><img src="./imgs/bookmark.png" alt="bookmark app"></a>
-                        </div>
-                        <div class="project-description">
-                            <p><span class="tdsl">Title:</span> Bookmark This</p>
-                            <p><span class="tdsl">Description:</span> A bookmark app that allows you to add/delete websites that you wish to
-                                reference.</p>
-                            <p><span class="tdsl">Stack:</span> Html, Css, JQuery and Webpack</p>
-                            <p><span class="tdsl">Links:</span> <span><a
-                                        href="https://github.com/thinkful-ei-iguana/javier-bookmarks-app">Github</a></span>
-                                <span><a href="https://thinkful-ei-iguana.github.io/javier-bookmarks-app/">Live
-                                        App</a></span>
-                            </p>
-                        </div>
-                    </section>
-                </div>
-                <div class="box-3">
-                    <section class="nested-box-3">
-                        <div class="project-img2">
-                            <a href="#"><img src="./imgs/quiz.png" alt="quiz app"></a>
-                        </div>
-                        <div class="project-description">
-                            <p><span class="tdsl">Title:</span> Harry Potter Quiz</p>
-                            <p><span class="tdsl">Description:</span> A Quiz app of 5 questions, that tests your knowledge of the Harry Potter movies.
-                            </p>
-                            <p><span class="tdsl">Stack:</span> Html, Css, JQuery </p>
-                            <p><span class="tdsl">Links:</span> <span><a
-                                        href="https://github.com/thinkful-ei-iguana/Javi_Chistina_quiz_app">Github</a></span>
-                                <span><a href="https://thinkful-ei-iguana.github.io/Javi_Chistina_quiz_app/">Live
-                                        App</a></span>
-                            </p>
-                        </div>
-                    </section>
-                    
+    <div class="nav-wrapper">
+        <div class="img-wrapper">
+        <header role="banner">
+            <div class="name-and-title">
+                <h1>Javier Zapien</h1>
+                <div class="type-box">
+                    <h2 class="type-text">Full Stack Web Developer.</h2>
                 </div>
             </div>
+        </header>
+        <nav role="navigation">
+            <div class="nav-links-wrapper">
+                <span><a href="index.html">Home</a></span>
+                <span><a href="project.html">Projects</a></span>
+                <span><a href="contact.html">Contact</a></span>
+            </div>
+        </nav>
+    </div>
+</div>
+    <main role="main" class="background-image">
+        <div class="intro"> <img src="./imgs/yeah.png" alt="bill lumberg">
+        </div>
+    <div class="project-wrapper">
+        <div class="box-2">
+            <section class="nested-box-2">
+                <div class="project-img1">
+                    <a href="#"><img src="./imgs/bookmark.png" alt="bookmark app"></a>
+                </div>
+                <div class="project-description">
+                    <p><span class="tdsl">Title:</span> Bookmark This</p>
+                    <p><span class="tdsl">Description:</span> A bookmark app that allows you to add/delete websites that
+                        you wish to
+                        reference.</p>
+                    <p><span class="tdsl">Stack:</span> Html, Css, JQuery and Webpack</p>
+                    <p><span class="tdsl">Links:</span> <span><a
+                                href="https://github.com/thinkful-ei-iguana/javier-bookmarks-app">Github</a></span>
+                        <span><a href="https://thinkful-ei-iguana.github.io/javier-bookmarks-app/">Live
+                                App</a></span>
+                    </p>
+                </div>
+            </section>
+        </div>
+        <div class="box-3">
+            <section class="nested-box-3">
+                <div class="project-img2">
+                    <a href="#"><img src="./imgs/quiz.png" alt="quiz app"></a>
+                </div>
+                <div class="project-description">
+                    <p><span class="tdsl">Title:</span> Harry Potter Quiz</p>
+                    <p><span class="tdsl">Description:</span> A Quiz app of 5 questions, that tests your knowledge of
+                        the Harry Potter movies.
+                    </p>
+                    <p><span class="tdsl">Stack:</span> Html, Css, JQuery </p>
+                    <p><span class="tdsl">Links:</span> <span><a
+                                href="https://github.com/thinkful-ei-iguana/Javi_Chistina_quiz_app">Github</a></span>
+                        <span><a href="https://thinkful-ei-iguana.github.io/Javi_Chistina_quiz_app/">Live
+                                App</a></span>
+                    </p>
+                </div>
+            </section>
+
+        </div>
+    </div>
+</main>
+    <footer role="content-info">&copy; 2019</footer>
 </body>
+
 </html>
