--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,7 @@
 </head>
 <body>
         <div class="nav-wrapper">
+            <div class="img-wrapper">
                 <header role="banner">
                     <div class="name-and-title">
                         <h1>Javier Zapien</h1>
@@ -25,7 +26,7 @@
                     </div>
                 </nav>
             </div>
-            <main role="main" class="background-image">
-                <div id="main-wrapper">
+            </div>
+           
 </body>
 </html>
