added css to contact. need to add link to the following email github and linkdin

--- a/contact.html
+++ b/contact.html
@@ -1,32 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Contact</title>
     <link rel="stylesheet" href="contact.css">
 </head>
+
 <body>
-        <div class="nav-wrapper">
-            <div class="img-wrapper">
-                <header role="banner">
-                    <div class="name-and-title">
-                        <h1>Javier Zapien</h1>
-                        <div class="type-box">
+    <div class="nav-wrapper">
+        <div class="img-wrapper">
+            <header role="banner">
+                <div class="name-and-title">
+                    <h1>Javier Zapien</h1>
+                    <div class="type-box">
                         <h2 class="type-text">Full Stack Web Developer.</h2>
                     </div>
-                    </div>
-                </header>
-                <nav role="navigation">
-                    <div class="nav-links-wrapper">
-                        <span><a href="index.html">Home</a></span>
-                        <span><a href="project.html">Projects</a></span>
-                        <span><a href="contact.html">Contact</a></span>
-                    </div>
-                </nav>
+                </div>
+            </header>
+            <nav role="navigation">
+                <div class="nav-links-wrapper">
+                    <span><a href="index.html">Home</a></span>
+                    <span><a href="project.html">Projects</a></span>
+                    <span><a href="contact.html">Contact</a></span>
+                </div>
+            </nav>
+        </div>
+    </div>
+    <main>
+        <section>
+            <div class="contact-wrapper">
+                <h2>email</h2>
+                <h2>github</h2>
+                <h2>linkdin</h2>
             </div>
-            </div>
-           
+        </section>
+
+
+    </main>
+
 </body>
+
 </html>
