added contact info

--- a/contact.html
+++ b/contact.html
@@ -32,9 +32,9 @@
     <main>
         <section>
             <div class="contact-wrapper">
-                <h2>email</h2>
-                <h2>github</h2>
-                <h2>linkdin</h2>
+                <h2>Email: <a href="zapien120@gmail.com">zapien120@gmail.com</a></h2>
+                <h2>Github: <a href="https://github.com/Javierz299">https://github.com/Javierz299</a> </h2>
+                <h2>Linkdin: <a href="https://www.linkedin.com/in/javier-zapien-66bb77188/">https://www.linkedin.com/in/javier-zapien-66bb77188/</a></h2>
             </div>
         </section>
 
