finshed responsive ness in contacts. everything is complete

--- a/contact.html
+++ b/contact.html
@@ -32,15 +32,16 @@
     <main>
         <section>
             <div class="contact-wrapper">
-                <h2>Email: <a href="zapien120@gmail.com">zapien120@gmail.com</a></h2>
-                <h2>Github: <a href="https://github.com/Javierz299">https://github.com/Javierz299</a> </h2>
-                <h2>Linkdin: <a href="https://www.linkedin.com/in/javier-zapien-66bb77188/">https://www.linkedin.com/in/javier-zapien-66bb77188/</a></h2>
+                <h2 class="links">Email: <a href="zapien120@gmail.com">zapien120@gmail</a></h2>
+                <h2 class="links">Github: <a href="https://github.com/Javierz299">/Javierz299</a> </h2>
+                <h2 class="links">Linkdin: <a
+                        href="https://www.linkedin.com/in/javier-zapien-66bb77188/">https://www.linkedin.com/</a></h2>
             </div>
         </section>
 
 
     </main>
-
+    <footer role="content-info">&copy; 2019</footer>
 </body>
 
 </html>
