--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
             <div class="name-and-title">
                 <h1>Javier Zapien</h1>
                 <div class="type-box">
-                <h2 class="type-text">Full Stack Web Developer.</h2>
-            </div>
+                    <h2 class="type-text">Full Stack Web Developer.</h2>
+                </div>
             </div>
         </header>
         <nav role="navigation">
@@ -31,12 +31,15 @@
             <div class="box-1">
                 <section>
                     <h3 class="about-me tdsl">ABOUT ME</h3>
-                    <p class="about-me-para">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas ipsa
-                        suscipit asperiores quia natus dolorum, est libero repellendus explicabo? Facilis similique,
-                        explicabo voluptatem fuga magni at doloribus voluptates corrupti, cum ullam commodi laudantium
-                        animi culpa? Iure blanditiis eos culpa expedita.</p>
-                    <p><span class="tdsl">Perosonal:</span> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Est corrupti unde
-                        dignissimos animi doloremque delectus impedit. Sint at suscipit molestiae!</p>
+                    <p class="about-me-para"> I worked in the Steel Industry for six years before pursuing a career in
+                        Full Stack Web Development.
+                        Hard Work and long hours is no stranger to me. Recently graduated from thinkful's Engineering
+                        Immersion program.
+                        Spending 60+ hours a week of devotation to building my skills and knowledge. I continue to develop my
+                        skills and demonstrate my passion for the web.</p>
+                    <p><span class="tdsl">Perosonal:</span> I am a competitive Obstacle Course Racer. Competing in races
+                        such as Spartan Race, Savage Race and Tough Mudder. Also a big fan of, Zoolander, Dumb and
+                        Dumber, The Office and GoT.</p>
                 </section>
             </div>
             <div class="box-2">
@@ -46,7 +49,8 @@
                     </div>
                     <div class="project-description">
                         <p><span class="tdsl">Title:</span> Bookmark This</p>
-                        <p><span class="tdsl">Description:</span> A bookmark app that allows you to add/delete websites that you wish to
+                        <p><span class="tdsl">Description:</span> A bookmark app that allows you to add/delete websites
+                            that you wish to
                             reference.</p>
                         <p><span class="tdsl">Stack:</span> Html, Css, JQuery and Webpack</p>
                         <p><span class="tdsl">Links:</span> <span><a
@@ -64,7 +68,8 @@
                     </div>
                     <div class="project-description">
                         <p><span class="tdsl">Title:</span> Harry Potter Quiz</p>
-                        <p><span class="tdsl">Description:</span> A Quiz app of 5 questions, that tests your knowledge of the Harry Potter movies.
+                        <p><span class="tdsl">Description:</span> A Quiz app of 5 questions, that tests your knowledge
+                            of the Harry Potter movies.
                         </p>
                         <p><span class="tdsl">Stack:</span> Html, Css, JQuery </p>
                         <p><span class="tdsl">Links:</span> <span><a
@@ -86,17 +91,17 @@
                             <img class="img" src="./imgs/jquery.png" alt="jquery image">
                         </div>
                         <div class="tech-imgs">
-                                <img class="img" src="./imgs/react.png" alt="React image">
-                            </div>
+                            <img class="img" src="./imgs/react.png" alt="React image">
+                        </div>
                     </div>
                     <div class="list-of-tech">
-                            <div class="tech-imgs">
-                                <img class="img" src="./imgs/nodejs.png" alt="nodejs image">
-                            </div>
-                            <div class="tech-imgs">
-                                    <img class="img" src="./imgs/mongodb.png" alt="mongodb image">
-                                </div>
+                        <div class="tech-imgs">
+                            <img class="img" src="./imgs/nodejs.png" alt="nodejs image">
                         </div>
+                        <div class="tech-imgs">
+                            <img class="img" src="./imgs/mongodb.png" alt="mongodb image">
+                        </div>
+                    </div>
                 </section>
             </div>
         </div>
